--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
-
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
